# Asistente-IA-SAT

./: .deployment  .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  applicationHost.xdt  cors.json  docker-compose.yml  package-lock.json  package.json  requirements-Nambu.txt  requirements.txt  run.py  startup.sh  tailwind.config.js  web.config
app/: __init__.py  hotfix.py  main-Nambu.py  main.py  pyproject.toml  standalone.py
app/api/: __init__.py  routes.py
app/api/endpoints/: __init__.py  langchain.py
app/core/: __init__.py  settings-Nambu.py  settings.py
app/models/: chat_models.py  feedback_models.py
app/routers/: manuals.py
app/services/: __init__.py  azure_ai_foundry_service.py  azure_openai_service.py  azure_search_service.py  chat_services-Nambu.py  chat_services.py  langchain_service.py  pdf_services-Nambu.py  pdf_services.py  redis_service.py  search_service.py  sharepoint_services.py  storage_service.py
app/utils/: pdf_helpers.py
docs/: README.md  api.md  arquitectura.md  arquitectura_azure_mvp.md  configuracion.md  desarrollo.md  despliegue.md  servicios.md  troubleshooting.md
docs/diagrams/: README.md
logs/: chat_history.json
static/css/: mobile.css  styles.css  styles.min.css
static/js/: chat-Nambu.js  chat.js  sw.js
templates/: chat-Nambu.html  chat.html  offline.html
