[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asistente-ia-sat"
version = "1.0.0"
description = "Microsoft-first FastAPI MVP for technical support over manuals using Azure AI Foundry"
requires-python = ">=3.8"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
